# tp-3-jakubigor

./: CMakeLists.txt  README.md  a3.cpp  flake.nix
raport/: oddanie_projektu.ipynb
